tests/baselines/reference/propertiesAndIndexers.errors.txt
tests/cases/compiler/propertiesAndIndexers.ts(16,5): error TS2412: Property '1' of type 'Z' is not assignable to numeric index type '文字'.
tests/cases/compiler/propertiesAndIndexers.ts(18,5): error TS2412: Property '3' of type '真假' is not assignable to numeric index type '文字'.
tests/cases/compiler/propertiesAndIndexers.ts(19,5): error TS2412: Property '6' of type '() => 文字' is not assignable to numeric index type '文字'.
tests/cases/compiler/propertiesAndIndexers.ts(23,5): error TS2412: Property '4' of type '真假' is not assignable to numeric index type '文字'.
tests/cases/compiler/propertiesAndIndexers.ts(28,5): error TS2411: Property '1' of type 'Z' is not assignable to string index type '数字'.
tests/cases/compiler/propertiesAndIndexers.ts(28,5): error TS2411: Property 'a' of type 'Y' is not assignable to string index type '数字'.
tests/cases/compiler/propertiesAndIndexers.ts(28,5): error TS2411: Property 'b' of type 'X' is not assignable to string index type '数字'.
tests/cases/compiler/propertiesAndIndexers.ts(29,5): error TS2411: Property 'c' of type '真假' is not assignable to string index type '数字'.
tests/cases/compiler/propertiesAndIndexers.ts(30,5): error TS2411: Property '3' of type '真假' is not assignable to string index type '数字'.
tests/cases/compiler/propertiesAndIndexers.ts(33,11): error TS2411: Property '4' of type '真假' is not assignable to string index type '数字'.
tests/cases/compiler/propertiesAndIndexers.ts(33,11): error TS2411: Property '5' of type '文字' is not assignable to string index type '数字'.
tests/cases/compiler/propertiesAndIndexers.ts(33,11): error TS2411: Property '6' of type '() => 文字' is not assignable to string index type '数字'.
tests/cases/compiler/propertiesAndIndexers.ts(33,11): error TS2413: Numeric index type '文字' is not assignable to string index type '数字'.
tests/cases/compiler/propertiesAndIndexers.ts(34,5): error TS2411: Property '2' of type 'Z' is not assignable to string index type '数字'.
tests/cases/compiler/propertiesAndIndexers.ts(34,5): error TS2412: Property '2' of type 'Z' is not assignable to numeric index type '文字'.
tests/cases/compiler/propertiesAndIndexers.ts(35,5): error TS2412: Property 'Infinity' of type '数字' is not assignable to numeric index type '文字'.
tests/cases/compiler/propertiesAndIndexers.ts(36,5): error TS2411: Property 'zoo' of type '文字' is not assignable to string index type '数字'.
tests/cases/compiler/propertiesAndIndexers.ts(44,5): error TS2411: Property 't' of type '数字' is not assignable to string index type '文字'.
tests/cases/compiler/propertiesAndIndexers.ts(50,5): error TS2412: Property '3' of type '真假' is not assignable to numeric index type '文字'.


==== tests/cases/compiler/propertiesAndIndexers.ts (19 errors) ====
    interface X { }
    interface Y {
        n: number;
    }
    interface Z {
        s: string;
    }
    
    interface A {
        a: Y;
        b: X;
        1: Z;
    }
    
    interface B extends A {
        [n: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2412: Property '1' of type 'Z' is not assignable to numeric index type '文字'.
        c: boolean;
        3: boolean;
        ~~~~~~~~~~~
!!! error TS2412: Property '3' of type '真假' is not assignable to numeric index type '文字'.
        6(): string;
        ~~~~~~~~~~~~
!!! error TS2412: Property '6' of type '() => 文字' is not assignable to numeric index type '文字'.
    }
    
    interface B {
        4: boolean;
        ~~~~~~~~~~~
!!! error TS2412: Property '4' of type '真假' is not assignable to numeric index type '文字'.
        5: string;
    }
    
    interface C extends A {
        [s: string]: number;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2411: Property '1' of type 'Z' is not assignable to string index type '数字'.
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2411: Property 'a' of type 'Y' is not assignable to string index type '数字'.
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2411: Property 'b' of type 'X' is not assignable to string index type '数字'.
        c: boolean;
        ~~~~~~~~~~~
!!! error TS2411: Property 'c' of type '真假' is not assignable to string index type '数字'.
        3: boolean;
        ~~~~~~~~~~~
!!! error TS2411: Property '3' of type '真假' is not assignable to string index type '数字'.
    }
    
    interface D extends B, C {
              ~
!!! error TS2411: Property '4' of type '真假' is not assignable to string index type '数字'.
              ~
!!! error TS2411: Property '5' of type '文字' is not assignable to string index type '数字'.
              ~
!!! error TS2411: Property '6' of type '() => 文字' is not assignable to string index type '数字'.
              ~
!!! error TS2413: Numeric index type '文字' is not assignable to string index type '数字'.
        2: Z;
        ~~~~~
!!! error TS2411: Property '2' of type 'Z' is not assignable to string index type '数字'.
        ~~~~~
!!! error TS2412: Property '2' of type 'Z' is not assignable to numeric index type '文字'.
        Infinity: number;
        ~~~~~~~~~~~~~~~~~
!!! error TS2412: Property 'Infinity' of type '数字' is not assignable to numeric index type '文字'.
        zoo: string;
        ~~~~~~~~~~~~
!!! error TS2411: Property 'zoo' of type '文字' is not assignable to string index type '数字'.
    }
    
    class P {
        [n: string]: string
    }
    
    class Q extends P {
        t: number;
        ~~~~~~~~~~
!!! error TS2411: Property 't' of type '数字' is not assignable to string index type '文字'.
    }
    
    var c: {
        [n: number]: string;
        c: boolean;
        3: boolean;
        ~~~~~~~~~~~
!!! error TS2412: Property '3' of type '真假' is not assignable to numeric index type '文字'.
    };